subdir('hello_world')
subdir('admm')
subdir('asynchronous_iterative')
subdir('asynchronous_iterative_dlmc')

if build_lc_examples
   subdir('lc_hello_world')
endif

subdir('sync_jacobi')
subdir('async_dlmc')
subdir('async_jacobi')
subdir('mean_or_sum')
subdir('collective_count')
subdir('bigfloat')
subdir('power_method')

if use_helics
  subdir('helics_hello_world')
endif
